org.salvationarmy.canteenreport/www/sass/_start.scss
.container{
	width: 100%;
	max-width: 1200px;
	min-width: 768px;
	margin: 0 auto;
}
.container.framed{
	padding-left: 80px;
	padding-top: 60px;
}
/* 
	added a start class just to center things
*/
.container.start{
	text-align: center;

	h1{
		text-transform: uppercase;
		margin-bottom: 2em;
	}
	a.btn-primary{
		display: block;
		width: 60%;
		margin: 0 auto;
		padding: 15px;
		text-align: center;
		font-size: 1.2em;
		text-transform: uppercase;

		&:hover{
			text-decoration: none;
		}
	}
}
.glyphicon-remove-circle:after {
	content: "\e088";
	font-size: 1.3em;
	position: relative;
	top: 4px;
	margin-left: 10px;
}
.glyphicon-remove-circle:before {
	content: none;
}

